calculation of day total serverside
